# Placement-Intelligence-Platform

./: pyproject.toml  readme.md  requirements.txt  schema.sql  start.py  test.py
data/: bluebook_data.json
static/: app.js  auth.js  dashboard.css  dashboard_v2.css  index.css  interview_room.css  interview_room.js  login.css  meeting.css  meeting.js  profile.css  profile.js  questions.css  setup_pages.css  style.css
templates/: auth.html  auth_callback.html  dashboard.html  dashboard_v2.html  index.html  interview_practice.html  interview_results.html  interview_room.html  interview_setup.html  meeting.html  profile.html  questions.html
templates/partials/: dashboard_sidebar.html
tests/: test_app.py
