[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "absl-py==2.4.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.14.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "audioread==3.1.0",
    "av==17.1.0",
    "blinker==1.9.0",
    "braceexpand==0.1.7",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "contourpy==1.3.3",
    "cryptography==49.0.0",
    "ctranslate2==4.8.0",
    "cuda-bindings==13.3.1",
    "cuda-pathfinder==1.5.5",
    "cycler==0.12.1",
    "cytoolz==1.1.0",
    "decorator==5.3.1",
    "deprecation==2.1.0",
    "dill==0.4.1",
    "distro==1.9.0",
    "edge-tts==7.0.2",
    "editdistance==0.8.1",
    "einops==0.8.2",
    "executing==2.2.1",
    "faster-whisper==1.1.1",
    "fiddle==0.3.0",
    "filelock==3.29.4",
    "Flask==3.1.1",
    "flatbuffers==25.12.19",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "fsspec==2024.12.0",
    "gitdb==4.0.12",
    "graphviz==0.21",
    "greenlet==3.5.3",
    "grpcio==1.81.1",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.5.1",
    "hpack==4.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==0.36.2",
    "hydra-core==1.3.2",
    "hyperframe==6.1.0",
    "idna==3.18",
    "indic_numtowords==1.1.0",
    "inflect==7.5.0",
    "intervaltree==3.2.1",
    "ipython_pygments_lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.20.0",
    "Jinja2==3.1.6",
    "jiter==0.15.0",
    "jiwer==3.1.0",
    "joblib==1.5.3",
    "kaldi-python-io==1.2.2",
    "kaldialign==0.9.1",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "libcst==1.8.6",
    "lightning-utilities==0.15.3",
    "llvmlite==0.47.0",
    "lxml==6.1.1",
    "Mako==1.3.12",
    "Markdown==3.10.2",
    "markdown-it-py==4.2.0",
    "MarkupSafe==3.0.3",
    "marshmallow==4.3.0",
    "matplotlib-inline==0.2.2",
    "mdurl==0.1.2",
    "ml_dtypes==0.5.4",
    "more-itertools==11.1.0",
    "mpmath==1.3.0",
    "msgpack==1.2.1",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numba==0.65.1",
    "numexpr==2.13.1",
    "numpy==2.4.6",
    "omegaconf==2.3.0",
    "onnx==1.22.0",
    "onnxruntime==1.27.0",
    "openai==1.93.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==3.0.3",
    "parso==0.8.7",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "pooch==1.9.0",
    "portalocker==3.2.0",
    "postgrest==2.31.0",
    "prompt_toolkit==3.0.52",
    "propcache==0.5.2",
    "protobuf==5.29.6",
    "psutil==7.2.2",
    "pure_eval==0.2.3",
    "pyarrow==24.0.0",
    "pycparser==3.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydub==0.25.1",
    "Pygments==2.20.0",
    "PyJWT==2.13.0",
    "pyloudnorm==0.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pywin32==312; platform_system == 'Windows'",
    "PyYAML==6.0.3",
    "RapidFuzz==3.14.5",
    "realtime==2.31.0",
    "regex==2026.6.28",
    "requests==2.32.4",
    "resampy==0.4.3",
    "rich==15.0.0",
    "ruamel.yaml==0.19.1",
    "sacrebleu==2.6.0",
    "sacremoses==0.1.1",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.63.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soundfile==0.14.0",
    "sox==1.5.0",
    "soxr==1.1.0",
    "SQLAlchemy==2.0.51",
    "srt==3.5.3",
    "stack-data==0.6.3",
    "storage3==2.31.0",
    "StrEnum==0.4.15",
    "supabase==2.31.0",
    "supabase-auth==2.31.0",
    "supabase-functions==2.31.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "toml==0.10.2",
    "toolz==1.1.0",
    "torch==2.12.1",
    "torchaudio==2.5.1+cu121",
    "torchmetrics==1.9.0",
    "torchvision==0.20.1+cu121",
    "tqdm==4.68.3",
    "traitlets==5.15.1",
    "transformers==5.12.1",
    "typeguard==4.5.2",
    "typer==0.25.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "wcwidth==0.8.2",
    "webdataset==1.0.2",
    "websockets==15.0.1",
    "Werkzeug==3.1.8",
    "wget==3.2",
    "whisper_normalizer==0.1.12",
    "wrapt==2.2.2",
    "xxhash==3.8.0",
    "yarl==1.24.2",
]

[tool.setuptools]
include-package-data = true

[tool.vercel]
entrypoint = "start:app"