[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "placement-intelligence-platform"
version = "0.1.0"
description = "Placement Intelligence Platform"
requires-python = ">=3.12,<3.13"

dependencies = [
    "Flask>=3.1,<4",
    "gunicorn>=23",
    "python-dotenv>=1.1",
    "requests>=2.32",
    "httpx>=0.28",
    "openai>=1.93",
    "supabase>=2.31",
    "av>=12,<15"
]

[tool.setuptools]
py-modules = ["start"]

[tool.vercel]
entrypoint = "start:app"